/**
 * Model Context Protocol (MCP) Integration Service
 * 
 * This service handles integration with Anthropic's MCP to maintain
 * user psychological profiles and recommendation history across sessions.
 */

/**
 * Initialize MCP context for a new user
 * 
 * @param {String} userId - Unique user identifier
 * @returns {Object} Initial MCP context
 */
async function initializeMcpContext(userId) {
  // Create default user profile
  const defaultProfile = createDefaultProfile();
  
  // Create initial MCP context
  const mcpContext = {
    userId,
    userProfile: defaultProfile,
    interactionHistory: [],
    recommendationHistory: [],
    createdAt: new Date().toISOString()
  };
  
  // Store in MCP
  await storeMcpContext(userId, mcpContext);
  
  return mcpContext;
}

/**
 * Create default user profile with neutral values
 */
function createDefaultProfile() {
  // Import dimensions from question bank
  const { DIMENSIONS } = require('./question-bank');
  
  // Initialize dimensions to middle values
  const dimensions = {};
  const confidences = {};
  
  Object.entries(DIMENSIONS).forEach(([dimension, bounds]) => {
    dimensions[dimension] = (bounds.min + bounds.max) / 2;
    confidences[dimension] = 0.3; // Low initial confidence
  });
  
  return {
    dimensions,
    confidences,
    answeredQuestions: [],
    interactionCount: 0,
    lastUpdated: new Date().toISOString()
  };
}

/**
 * Retrieve user's MCP context
 * 
 * @param {String} userId - Unique user identifier
 * @returns {Object} User's MCP context or null if not found
 */
async function getMcpContext(userId) {
  try {
    // This is a placeholder for actual MCP API integration
    // In production, this would call Anthropic's MCP API
    
    // Simulated MCP API call
    // const response = await fetch(`https://api.anthropic.com/v1/mcp/${userId}`, {
    //   method: 'GET',
    //   headers: {
    //     'Authorization': `Bearer ${process.env.ANTHROPIC_API_KEY}`,
    //     'Content-Type': 'application/json'
    //   }
    // });
    
    // if (!response.ok) {
    //   throw new Error(`MCP API error: ${response.status}`);
    // }
    
    // return await response.json();
    
    // For development, retrieve from local storage or database
    // This would be replaced with actual MCP API calls
    return await retrieveFromLocalStorage(userId);
    
  } catch (error) {
    console.error('Error retrieving MCP context:', error);
    
    // If not found or error, initialize new context
    if (error.message.includes('not found')) {
      return await initializeMcpContext(userId);
    }
    
    return null;
  }
}

/**
 * Store user's MCP context
 * 
 * @param {String} userId - Unique user identifier
 * @param {Object} mcpContext - User's MCP context data
 * @returns {Boolean} Success status
 */
async function storeMcpContext(userId, mcpContext) {
  try {
    // This is a placeholder for actual MCP API integration
    // In production, this would call Anthropic's MCP API
    
    // Simulated MCP API call
    // const response = await fetch(`https://api.anthropic.com/v1/mcp/${userId}`, {
    //   method: 'PUT',
    //   headers: {
    //     'Authorization': `Bearer ${process.env.ANTHROPIC_API_KEY}`,
    //     'Content-Type': 'application/json'
    //   },
    //   body: JSON.stringify(mcpContext)
    // });
    
    // return response.ok;
    
    // For development, store in local storage or database
    // This would be replaced with actual MCP API calls
    return await storeInLocalStorage(userId, mcpContext);
    
  } catch (error) {
    console.error('Error storing MCP context:', error);
    return false;
  }
}

/**
 * Update user profile in MCP context
 * 
 * @param {String} userId - Unique user identifier
 * @param {Object} updatedProfile - Updated user profile
 * @returns {Boolean} Success status
 */
async function updateUserProfileInMcp(userId, updatedProfile) {
  try {
    // Get current MCP context
    const mcpContext = await getMcpContext(userId);
    if (!mcpContext) {
      throw new Error('User context not found');
    }
    
    // Update profile
    mcpContext.userProfile = updatedProfile;
    mcpContext.lastUpdated = new Date().toISOString();
    
    // Store updated context
    return await storeMcpContext(userId, mcpContext);
    
  } catch (error) {
    console.error('Error updating user profile in MCP:', error);
    return false;
  }
}

/**
 * Record question interaction in MCP
 * 
 * @param {String} userId - Unique user identifier
 * @param {String} questionId - Question identifier
 * @param {String} optionId - Selected option identifier
 * @returns {Boolean} Success status
 */
async function recordQuestionInteraction(userId, questionId, optionId) {
  try {
    // Get current MCP context
    const mcpContext = await getMcpContext(userId);
    if (!mcpContext) {
      throw new Error('User context not found');
    }
    
    // Add interaction to history
    mcpContext.interactionHistory.push({
      type: 'question',
      questionId,
      optionId,
      timestamp: new Date().toISOString()
    });
    
    // Store updated context
    return await storeMcpContext(userId, mcpContext);
    
  } catch (error) {
    console.error('Error recording question interaction in MCP:', error);
    return false;
  }
}

/**
 * Record recommendation interaction in MCP
 * 
 * @param {String} userId - Unique user identifier
 * @param {String} animeId - Anime identifier
 * @param {String} interactionType - Type of interaction (viewed, selected, etc)
 * @param {Number} rating - Optional user rating
 * @returns {Boolean} Success status
 */
async function recordRecommendationInteraction(userId, animeId, interactionType, rating = null) {
  try {
    // Get current MCP context
    const mcpContext = await getMcpContext(userId);
    if (!mcpContext) {
      throw new Error('User context not found');
    }
    
    // Add interaction to history
    mcpContext.recommendationHistory.push({
      animeId,
      interactionType,
      rating,
      timestamp: new Date().toISOString()
    });
    
    // Store updated context
    return await storeMcpContext(userId, mcpContext);
    
  } catch (error) {
    console.error('Error recording recommendation interaction in MCP:', error);
    return false;
  }
}

/**
 * Store recommendations in MCP context
 * 
 * @param {String} userId - Unique user identifier
 * @param {Array} recommendations - Generated recommendations
 * @returns {Boolean} Success status
 */
async function storeRecommendationsInMcp(userId, recommendations) {
  try {
    // Get current MCP context
    const mcpContext = await getMcpContext(userId);
    if (!mcpContext) {
      throw new Error('User context not found');
    }
    
    // Store current recommendations
    mcpContext.currentRecommendations = recommendations.map(rec => ({
      animeId: rec.anime.id,
      score: rec.score,
      matchReasons: rec.matchReasons
    }));
    
    // Store updated context
    return await storeMcpContext(userId, mcpContext);
    
  } catch (error) {
    console.error('Error storing recommendations in MCP:', error);
    return false;
  }
}

// Placeholder local storage functions for development
// These would be replaced with actual MCP API calls in production

async function retrieveFromLocalStorage(userId) {
  // This is a placeholder for actual database/storage retrieval
  // In development, this might use localStorage, IndexedDB, or a development database
  
  // Simulate retrieval
  const storedData = localStorage.getItem(`mcp_${userId}`);
  if (!storedData) {
    throw new Error('User context not found');
  }
  
  return JSON.parse(storedData);
}

async function storeInLocalStorage(userId, mcpContext) {
  // This is a placeholder for actual database/storage
  // In development, this might use localStorage, IndexedDB, or a development database
  
  // Simulate storage
  localStorage.setItem(`mcp_${userId}`, JSON.stringify(mcpContext));
  return true;
}

module.exports = {
  getMcpContext,
  storeMcpContext,
  updateUserProfileInMcp,
  recordQuestionInteraction,
  recordRecommendationInteraction,
  storeRecommendationsInMcp
};
